# lattice-ai

./: .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/src/: main.py
apps/api/src/agents/: entity_extraction.py  meeting_intelligence.py  memory_retrieval.py  relationship_inference.py  signal_monitoring.py
apps/api/src/api/v1/: router.py
apps/api/src/api/v1/routes/: companies.py  founders.py  graph.py  intelligence.py  memos.py  pipeline.py  portfolio.py  signals.py
apps/api/src/core/: config.py  logging.py
apps/api/src/db/: base.py
apps/api/src/graph/: engine.py  seed.py
apps/api/src/models/: entities.py
apps/api/src/schemas/: entities.py
apps/api/src/workers/: celery_app.py  tasks.py
apps/api/tests/: conftest.py  test_health.py
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/companies/: page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/founders/: page.tsx
apps/web/src/components/graph/: EntityDetailPanel.tsx  GraphExplorerPage.tsx  VentureNode.tsx  graphSeedData.ts
apps/web/src/components/intelligence/: ActivityTimeline.tsx  CompaniesPage.tsx  DashboardPage.tsx  DealPipelinePage.tsx  FoundersPage.tsx  IntelligenceMetricsChart.tsx  MeetingIntelligencePage.tsx  MemorySearchPage.tsx  MemosPage.tsx  PortfolioIntelligencePage.tsx  ProactiveInsightsPanel.tsx  SettingsPage.tsx  SignalFeedWidget.tsx  SignalsPage.tsx
apps/web/src/components/layout/: AppShell.tsx  Providers.tsx  Sidebar.tsx  TopBar.tsx
apps/web/src/components/shared/: CommandPalette.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  tooltip.tsx
apps/web/src/lib/: api.ts  utils.ts
apps/web/src/lib/hooks/: useCompanies.ts  useFounders.ts  useGraph.ts  useIntelligence.ts  useMemos.ts  usePipeline.ts  usePortfolio.ts  useSignals.ts
infrastructure/docker/: docker-compose.yml
infrastructure/k8s/: api-deployment.yaml
(+8 files in other folders)
